Realigned list and corrected border problem

--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    width: 500px;
+    margin: 0 auto;
 }
 ul li:first-child {
     border-top: 1px #ccc solid;
     border-radius: 5px 5px 0px 0px;
-    border-bottom: none;
 }
 ul li:last-child {
     border-radius: 0px 0px 5px 5px;
